<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2022 Automate The Planet Ltd.
  ~ Author: Anton Angelov
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ You may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>solutions.bellatrix</groupId>
    <artifactId>bellatrix</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>bellatrix.layout</module>
        <module>bellatrix.core</module>
        <module>bellatrix.plugins.screenshots</module>
        <module>bellatrix.plugins.video</module>
        <module>bellatrix.web</module>
        <module>bellatrix.desktop</module>
        <module>bellatrix.android</module>
        <module>bellatrix.ios</module>
        <module>bellatrix.api</module>
        <module>bellatrix.web.tests</module>
        <module>bellatrix.api.tests</module>
    </modules>

    <properties>
        <maven.compiler.source>13</maven.compiler.source>
        <maven.compiler.target>13</maven.compiler.target>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <surefire.testng>2.22.2</surefire.testng>
        <surefire.junit>3.0.0-M5</surefire.junit>

        <surefire.version>${surefire.junit}</surefire.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <includes>
                        <include>**/*.class</include>
                    </includes>
                    <testFailureIgnore>true</testFailureIgnore>
                    <disableXmlReport>true</disableXmlReport>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>